--- a/style.css
+++ b/style.css
@@ -349,6 +349,15 @@ body {
   border: 3px solid rgba(238, 201, 66, 1);
   transition: 0.5s ease;
 }
+#dev-buttons {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  flex-wrap: wrap;
+  row-gap: 2rem;
+  column-gap: 5rem;
+  margin-top: 5%;
+}
 
 /* Task content blocks */
 .contentBlocks {
@@ -398,6 +407,10 @@ body {
   gap: 15px;
   align-items: center;
   justify-content: center;
+}
+#josh-uwu {
+  width: 30%;
+  height: 30%;
 }
 .contentBlocks .imagegrab a {
   width: fit-content;
